test/scc/expr/semantic-errors/155.a
155.t:3:26: error: too many initializer values